src/objects/Compliance_Review__c.object
<CustomObject>
    <fields>
        <fullName>Fantastic_SBR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Tone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_UPL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Unauthorized_discount_provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Unethical_Business_Pratice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_disclaimer_provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_fully_verify_the_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_tax_provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Call_Quality_Issues_OLD__c</fullName>
        <formula>IF (TEXT(Violation_A1__c) = &quot;Disqualified&quot;, &quot;0&quot;, 
IF(TEXT(Violation_A2__c) = &quot;Disqualified&quot;, &quot;Disqualified&quot;, 
IF (TEXT(Violation_A3__c) = &quot;No&quot; || TEXT(Violation_A4__c) = &quot;Yes&quot;, &quot;0&quot;, TEXT( Violations_Total_Score__c +  Call_Quality_Total_Score_OLD__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total (Call Quality &amp; Issues) OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Call_Quality_Violations__c</fullName>
        <formula>IF (TEXT(Violation_A1__c) = &quot;Disqualified&quot;, &quot;0&quot;, 
IF(TEXT(Violation_A2__c) = &quot;Disqualified&quot;, &quot;Disqualified&quot;, 
IF (TEXT(Violation_A3__c) = &quot;No&quot; || TEXT(Violation_A4__c) = &quot;Yes&quot;, &quot;0&quot;, TEXT( Violations_Total_Score__c +  Call_Quality_Total_Score__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total (Call Quality &amp; Issues)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Number_OLD__c</fullName>
        <formula>Violations_Total_Score__c + Call_Quality_Total_Score_OLD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total(Number) OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Number__c</fullName>
        <formula>Violations_Total_Score__c + Call_Quality_Total_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greeting_A1__c</fullName>
        <inlineHelpText>Use of proper Greeting / Closing Interaction</inlineHelpText>
        <label>Greeting &amp; Closing Interaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greeting_Cal_Possible_A1__c</fullName>
        <label>Greeting Cal Possible A1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greeting_Comments_A1__c</fullName>
        <label>Comments</label>
        <length>70000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Greeting_Possible_Score_A1__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Possible Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greeting_Score_A1__c</fullName>
        <formula>Greeting_Cal_Possible_A1__c *  Greeting_Score_Convert_A1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use of proper greeting Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greeting_Score_Convert_A1__c</fullName>
        <label>Greeting Score Convert A1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Greeting_Score__c</fullName>
        <formula>Greeting_Score_A1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Greeting Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_A1_Possible_Score__c</fullName>
        <label>Handling A1 Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_A1_Score__c</fullName>
        <label>Handling A1 Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_A1__c</fullName>
        <inlineHelpText>Did agent use proper phone etiquette?</inlineHelpText>
        <label>Did agent use proper phone etiquette</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y(A)</fullName>
                </value>
                <value>
                    <fullName>Y(P)</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handling_A2_Possible_Score__c</fullName>
        <label>Handling A2 Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_A2_Score__c</fullName>
        <label>Handling A2 Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_A2__c</fullName>
        <inlineHelpText>Did agent maintain his/her professionalism throughout the call?</inlineHelpText>
        <label>Did agent remain professional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y(A)</fullName>
                </value>
                <value>
                    <fullName>Y(P)</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handling_A3_Possible_Score__c</fullName>
        <label>Handling A3 Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_A3_Score__c</fullName>
        <label>Handling A3 Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_A3__c</fullName>
        <inlineHelpText>Did agent take correct internal actions to resolve the customer’s needs?</inlineHelpText>
        <label>Did agent take correct internal actions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y(A)</fullName>
                </value>
                <value>
                    <fullName>Y(P)</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handling_Score_Label__c</fullName>
        <formula>IF(Handling_Total_Possible_Points__c = 0,&quot;&quot;, 
IF(Handling_Score__c/Handling_Total_Possible_Points__c &lt; 0.33,&quot;Poor&quot;, IF(Handling_Score__c/Handling_Total_Possible_Points__c &lt;= 0.65, &quot;Weak&quot;, IF(Handling_Score__c/Handling_Total_Possible_Points__c &lt;= 0.9, &quot;Good&quot;,
IF(Handling_Score__c/Handling_Total_Possible_Points__c &lt;= 1, &quot;Excellent&quot;,&quot;&quot;)))))</formula>
        <label>Score Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handling_Score__c</fullName>
        <formula>Handling_A1_Score__c +  Handling_A2_Score__c +  Handling_A3_Score__c  +  Handling_A4_Score__c +  Handling_A5_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handling_Total_Possible_Points__c</fullName>
        <formula>Handling_A1_Possible_Score__c + Handling_A2_Possible_Score__c +  Handling_A3_Possible_Score__c +  Handling_A4_Possible_Score__c +
 Handling_A5_Possible_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Possible Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Have_Violation_Number__c</fullName>
        <formula>IF( Total_Violation_Number__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Have Issue (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_After_Coaching_Completed__c</fullName>
        <formula>If (ISPICKVAL(Status__c, &quot;Rep Coaching Completed&quot;), (NOW() -  Corrective_Plan_Start_Date__c) * 24, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours After Coaching Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identify_1_Score__c</fullName>
        <formula>NeedAnalysis_Cal_Possible_A1__c *  NeedAnalysis_Score_Convert_A1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify 1 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identify_2_Score__c</fullName>
        <formula>NeedAnalysis_Cal_Possible_A2__c *  NeedAnalysis_Score_Convert_A2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identify 2 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiate_1_Score__c</fullName>
        <formula>PPK_Cal_Possible_A1__c *  PPK_Score_Convert_A1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiate 1 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiate_2_Score__c</fullName>
        <formula>PPK_Cal_Possible_A2__c *  PPK_Score_Convert_A2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiate 2 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inoffensive_Non_Abrasive__c</fullName>
        <label>Inoffensive/Non-Abrasive?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_A1__c</fullName>
        <description>Part of Fundamental Interaction section.</description>
        <label>Rep name and mentioning of LZ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_A2__c</fullName>
        <description>Part of Fundamental Interaction section.</description>
        <label>Invitation to assist/offer to help</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_A3__c</fullName>
        <description>Part of Fundamental Interaction section.</description>
        <label>Offer contact info (email or phone)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Comments__c</fullName>
        <label>Comments</label>
        <length>3880</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction_Score_Label__c</fullName>
        <formula>IF(Interaction_Total_Possible_Points__c = 0,&quot;&quot;, 
IF(Interaction_Score__c/Interaction_Total_Possible_Points__c &lt; 0.33,&quot;Poor&quot;, IF(Interaction_Score__c/Interaction_Total_Possible_Points__c &lt;= 0.65, &quot;Weak&quot;, IF(Interaction_Score__c/Interaction_Total_Possible_Points__c &lt;= 0.9, &quot;Good&quot;, 
IF(Interaction_Score__c/Interaction_Total_Possible_Points__c &lt;= 1, &quot;Excellent&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Score__c</fullName>
        <formula>IF(ISPICKVAL(Interaction_A1__c,&quot;Yes&quot;), 2, 0) +
IF(ISPICKVAL(Interaction_A2__c,&quot;Yes&quot;), 2, 0) +
IF(ISPICKVAL(Interaction_A3__c,&quot;Yes&quot;), 2, 0) +
IF(ISPICKVAL(Interaction_A4__c,&quot;Yes&quot;), 2, 0) +
IF(ISPICKVAL(Interaction_A5__c,&quot;Yes&quot;), 2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction_Total_Possible_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Possible Points</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCP_2nd_Contact_Disclaime__c</fullName>
        <label>LCP 2nd Contact Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_2nd_Contact_Disclaimer_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LCP Outbound 2nd Contact Disclaimer Reference</description>
        <inlineHelpText>LCP Outbound 2nd Contact Disclaimer Reference</inlineHelpText>
        <label>LCP 2nd Contact Disclosure Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP Outbound 2nd Contact Disclaimer Refe)</relationshipLabel>
        <relationshipName>Compliance_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_2nd_Contact_Disclaimer_startDate__c</fullName>
        <label>LCP 2nd Contact Disclosure startDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_Discounts_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP Discounts Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP Discounts Reference)</relationshipLabel>
        <relationshipName>LCP_Discounts_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_Discounts_Start_Date__c</fullName>
        <label>LCP Discounts Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_Discounts__c</fullName>
        <label>LCP Discounts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_Fee_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP Fee Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP Fee Reference)</relationshipLabel>
        <relationshipName>Compliance_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_Fee_StartDate__c</fullName>
        <label>LCP Fee StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_Fee__c</fullName>
        <label>LCP Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_Outbound_Disclaimer_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP Outbound Disclosure Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP Outbound Disclaimer Reference)</relationshipLabel>
        <relationshipName>LCP_Outbound_Disclaimer_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_Outbound_Disclaimer_Start_Date__c</fullName>
        <label>LCP Outbound Disclosure Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_Outbound_Disclaimer__c</fullName>
        <label>LCP Outbound Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_Security_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP Security Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP Security Reference)</relationshipLabel>
        <relationshipName>LCP_Security_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_Security_Start_Date__c</fullName>
        <label>LCP Security Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_Security__c</fullName>
        <label>LCP Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP Service Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP Service Reference)</relationshipLabel>
        <relationshipName>LCP_Service_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_Service_Start_Date__c</fullName>
        <label>LCP Service Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_Service__c</fullName>
        <label>LCP Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_Taxation_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP Taxation Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP Taxation Reference)</relationshipLabel>
        <relationshipName>LCP_Taxation_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_Taxation_Start_Date__c</fullName>
        <label>LCP Taxation Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_Taxation__c</fullName>
        <label>LCP Taxation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_UPL_Coaching_Date__c</fullName>
        <label>LCP UPL Coaching Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_UPL_Coaching_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP UPL Coaching Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP UPL Coaching Reference)</relationshipLabel>
        <relationshipName>LCP_UPL_Coaching_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_UPL_Coaching__c</fullName>
        <label>LCP UPL Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_UPL_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP UPL Reference</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP UPL Reference)</relationshipLabel>
        <relationshipName>LCP_UPL_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_UPL_Start_Date__c</fullName>
        <label>LCP UPL Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_UPL__c</fullName>
        <label>LCP UPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_Unethical_Business_Practice_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCP Unethical Business Practice Ref</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Compliance Reviews (LCP Unethical Business Practice Ref)</relationshipLabel>
        <relationshipName>LCP_Unethical_Business_Practice_Ref</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCP_Unethical_Business_Practice__c</fullName>
        <label>LCP Unethical Business Practice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LCP_Unethical_Practice_Start_Date__c</fullName>
        <label>LCP Unethical Practice Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LCP_Written_Warning_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>LCP Written Warning Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCP_Written_Warning_Reference__c</fullName>
        <label>LCP Written Warning Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Length_of_Call__c</fullName>
        <label>Length of Call (Minute)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listening_A1_Possible_Score__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Listening A1 Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listening_A1_Score__c</fullName>
        <label>Listening A1 Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listening_A1__c</fullName>
        <inlineHelpText>How well does the rep understand the customer&apos;s wants and needs.
Does the customer understand the intent of the call</inlineHelpText>
        <label>Mutual understanding (wants and needs)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Product_Opportunities__c</fullName>
        <label>Marketing/Product Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Violation_Notes__c</fullName>
        <label>Marketing Issue Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Violations__c</fullName>
        <formula>IF(
  ISPICKVAL(Did_Not_Overstate_LZ_Statistics__c, &apos;No&apos;)
  , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Issues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>My_Account_Assistance__c</fullName>
        <inlineHelpText>if applicable</inlineHelpText>
        <label>My Account Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NeedAnalysis_Cal_Possible_A1__c</fullName>
        <label>NeedAnalysis Cal Possible A1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NeedAnalysis_Cal_Possible_A2__c</fullName>
        <label>NeedAnalysis Cal Possible A2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NeedAnalysis_Comments_A1__c</fullName>
        <label>Comments</label>
        <length>70000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NeedAnalysis_Comments_A2__c</fullName>
        <label>Comments</label>
        <length>70000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NeedAnalysis_Possible_Score_A1__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Possible Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NeedAnalysis_Possible_Score_A2__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Possible Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NeedAnalysis_Score_Convert_A1__c</fullName>
        <label>NeedAnalysis Score Convert A1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>